<resources>
    <string name="app_name">Elevate</string>
    <string name="welcome">Welcome back, ______!</string>
    <string name="login_streak">Login streak #</string>
    <string name="start_button">START OFF YOUR DAY!</string>
    <string name="logo_desc">Image of a plant growing from the earth</string>
    <string name="home_page">Home Page</string>
    <string name="task_page">Task Page</string>
    <string name="profile_page">Profile</string>
    <string name="event_page">Event Board</string>
    <string name="home_button">Home Button</string>
    <string name="profile_button">Profile Button</string>
    <string name="checklist_button">Checklist Button</string>
    <string name="event_button">Event Button</string>
    <string name="sprout">A small sprout</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="task_listing">Task</string>
    <string name="event_listing">Upcoming Event</string>
    <string name="plus">+</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="slogan">Become a better you.</string>
    <string name="start_sting">Alright, let\'s get started!</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>