<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/EventFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".EventListFragment" >

    <Button
        android:id="@+id/UpcomingEventButton2"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/event_listing"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UpcomingEventButton1" />

    <Button
        android:id="@+id/UpcomingEventButton3"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/event_listing"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UpcomingEventButton2" />

    <Button
        android:id="@+id/UpcomingEventButton4"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/event_listing"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UpcomingEventButton3" />

    <Button
        android:id="@+id/UpcomingEventButton1"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/event_listing"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EventPageLabel" />

    <TextView
        android:id="@+id/EventPageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/event_page"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppName" />

    <TextView
        android:id="@+id/AppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/HomeButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="60dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/hello_blank_fragment"
        android:src="@drawable/home_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/CheckButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="60dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/checklist_button"
        android:src="@drawable/check_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ListButton"
        app:layout_constraintStart_toEndOf="@+id/HomeButton" />

    <ImageButton
        android:id="@+id/ListButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="60dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/event_button"
        android:src="@drawable/list_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ProfileButton"
        app:layout_constraintStart_toEndOf="@+id/CheckButton" />

    <ImageButton
        android:id="@+id/ProfileButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="60dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/profile_button"
        android:src="@drawable/profile_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>